<resources>
    <string name="app_name">PackMap</string>

    <!-- String related to login sign up -->
    <string name="btn_log_in">Log in</string>
    <string name="btn_sign_up">Sign up</string>

    <!-- Strings related to login -->
    <string name="prompt_phone">Phone Number</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="error_invalid_email">This phone number is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_pack_list">Packs</string>
    <string name="title_places">Places</string>
    <string name="title_packs">Packs</string>
    <string name="title_explore">Explore</string>
    <string name="title_select">Select</string>
    <string name="menu_update_account">Account Setting</string>
    <string name="menu_delete_account">Delete Account</string>
    <string name="menu_log_out_account">Log Out</string>
    <string name="menu_create_group">Create Group</string>

    <string name="group_name">Group Name:</string>
    <string name="Invite_phone_num">Phone Number:</string>


    <string name="err_msg_empty">This field can\'t be empty</string>
    <string name="err_msg_user_exist">User already exists</string>
    <string name="err_msg_user_login_failed">Wrong password or User not exist</string>
    <string name="err_msg_password">Password not match</string>

    <string name="sign_up_phone">Phone Number:</string>
    <string name="sign_up_first_name">First Name:</string>
    <string name="sign_up_last_name">Last Name:</string>
    <string name="sign_up_password">Password:</string>
    <string name="sign_up_reenter_password">Confirm Password:</string>
    <string name="submit">Submit</string>
    <string name="submit_change">Submit Change</string>

    <string name="title_activity_phone_auth">PhoneAuthActivity</string>
    <string name="phone_auth_title">Enter the code you receive:</string>
    <string name="back">Back</string>
    <string name="send_code">Send Code</string>
    <string name="resend_code">Resend Code</string>

    <!-- String related to map -->
    <string name="google_maps_API_key">AIzaSyAm0quTUQfR1OHTbeLlh8oajO1Yw7E6jRw</string>
    <string name="up_vote">up</string>
    <string name="down_vote">down</string>
    <string name="add_to_location">Add</string>
    <string name="content_bottom_sheet">android.support.design.widget.BottomSheetBehavior</string>

    <!-- Creating new group -->
    <string name="add_users_below">Add users below by searching and checking their box</string>
    <string name="add_phone_numbers">Add Users by Phone Number</string>
    <string name="not_valid_user">Invalid User Phone Number</string>
    <string name="need_more_users">Need At Least 1 Other User</string>

    <!-- New Group Notifications -->
    <string name="notification_channel_new_group_id">new_group</string>
    <string name="notification_channel_new_group_name">New group</string>
    <string name="notification_added_to_group">New Group Created!</string>

    <!-- New Activity Notifications -->
    <string name="notification_channel_new_activity_id">new_activity</string>
    <string name="notification_channel_new_activity_name">New activity</string>
    <string name="notification_activity_created">New Activity Started!</string>

    <string name="navigation_pack_activities">Activities</string>
    <string name="navigation_pack_members">Members</string>
    <string name="navigation_activity_map">Map</string>
    <string name="navigation_activity_vote">Votes</string>

    <string name="list_item_name">Name</string>
    <string name="menu_add_member">Add Member</string>
    <string name="menu_quit_group">Quit</string>
    <string name="upvote">Upvote</string>
    <string name="downvote">Downvote</string>
    <string name="init_score">0</string>

    <string name="menu_add_info">add information</string>
    <!-- Creating new activity -->
    <string name="menu_add_activity">Add Activity</string>
</resources>
