<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:context=".InviteMemberActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_add_member" />

    <EditText
        android:id="@+id/member_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/submit_invite_member"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_style"
        android:layout_margin="@dimen/text_margin"
        android:layout_gravity="center_horizontal"
        android:text="@string/submit" />

    <Button
        android:id="@+id/invite_member_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/button_style"
        android:layout_margin="@dimen/text_margin"
        android:layout_gravity="center_horizontal"
        android:text="@string/back" />

</LinearLayout>